--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="icon" href="icono.ico">
 </head>
 <body>
+    <div class "resolucion">
+        <div class="desktop">
+        </div>
+    <div class="tablet"></div>
+    <div class="movil"></div>
+        
     <!-- MENU ENCABEZADO -->
     <div class="contenedor-header">
         <header>
